<resources>
    <string name="app_name">settingsApp</string>

    <string name="settings">Settings</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Kostya Batrak</string>

    <string name="pref_title_list_colors">Background color</string>
    <string-array name="pref_example_list_colors">
        <item>Orange</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Gray</item>
    </string-array>

    <string-array name="pref_example_list_colors_values">
        <item>#ff8640</item>
        <item>#40a6ff</item>
        <item>#40ff73</item>
        <item>#949799</item>
    </string-array>

    <string name="pref_summary_checkbox">Checkbox summary</string>
    <string name="pref_title_checkbox">Checkbox title</string>

</resources>
