<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:layout="@layout/preference_layout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:layout="@layout/preference_layout"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <ListPreference
        android:defaultValue="#949799"
        android:entries="@array/pref_example_list_colors"
        android:entryValues="@array/pref_example_list_colors_values"
        android:key="example_list_colors"
        android:layout="@layout/preference_layout"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_colors" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_auto_delete"
        android:layout="@layout/preference_layout"
        android:summary="@string/pref_summary_checkbox"
        android:title="@string/pref_title_checkbox" />

</PreferenceScreen>